--- a/package.json
+++ b/package.json
@@ -17,13 +17,17 @@
     "babel-core": "^6.14.0",
     "babel-preset-es2015": "^6.14.0",
     "bootstrap": "^4.0.0-alpha.3",
+    "del": "^2.2.2",
     "es6-promise": "^3.2.1",
     "gsap": "^1.19.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-babel": "^6.1.2",
+    "gulp-cache": "^0.4.5",
     "gulp-concat": "^2.6.0",
     "gulp-cssmin": "^0.1.7",
+    "gulp-filter": "^4.0.0",
+    "gulp-ignore": "^2.0.1",
     "gulp-imagemin": "^3.0.2",
     "gulp-include": "^2.3.1",
     "gulp-jshint": "^2.0.1",
@@ -35,8 +39,10 @@
     "gulp-sass": "^2.3.2",
     "gulp-uglify": "^2.0.0",
     "gulp-util": "^3.0.7",
+    "gulp-zip": "^3.2.0",
     "jshint": "^2.9.2",
     "livereload": "^0.5.0",
+    "run-sequence": "^1.2.2",
     "scrollmagic": "^2.0.5",
     "susy": "^2.2.12",
     "tether": "^1.3.4",
